tests/paczka1/fuzzy1/93917707.err
Error in line 7: FS1C1qG5ggs S354 69,6
Error in line 15: saCF0x S115 141,0
Error in line 22: FS1C1qG5ggs S354 50,9
Error in line 23: saCF0x A125 48,6
